--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.12.0",
     "next": "latest",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^9",
-    "eslint-config-next": "latest",
+    "@biomejs/biome": "^1.9.4",
+    "@eslint/eslintrc": "^3.2.0",
+    "@stylistic/eslint-plugin": "^2.13.0",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
